--- a/style.css
+++ b/style.css
@@ -341,10 +341,12 @@ footer {
     margin-top: 140px;
 }
 
-footer h1 {
+footer h3 {
     text-align: center;
     line-height: 230px;
-    color: rgb(139, 139, 139);
+    color: #333;
+    font-size: 26px;
+    font-weight: 400;
 }
 
 
